--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ var marker = L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
 function onLocationFound(e) {
 		var radius = e.accuracy / 2;
 
-		var locationMarker = L.marker(e.latlng).addTo(map)
-			.bindPopup('You are within ' + radius + ' meters from this point').openPopup();
+		var locationMarker = L.circle(e.latlng).addTo(map)
 
 		var locationCircle = L.circle(e.latlng, radius).addTo(map);
 	}
