--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script src="https://kit.fontawesome.com/2c9e6838ea.js" crossorigin="anonymous"></script>
 
 
-    <script>
+  <script>
       var map = L.map('map').setView([-19.93262551194009, -43.936037967999724], 17);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
@@ -121,10 +121,9 @@ var marker = L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
 function onLocationFound(e) {
 		var radius = e.accuracy / 2;
 
-		var locationMarker = L.circle(e.latlng).addTo(map)
+		var locationMarker = L.marker(e.latlng).addTo(map)
 
-		var locationCircle = L.circle(e.latlng, radius), {color: 'red',
-    fillColor: '#f03',fillOpacity: 0.5}.addTo(map);
+		var locationCircle = L.circle(e.latlng, radius).addTo(map);
 	}
 
 	function onLocationError(e) {
