--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
 }).addTo(map);
 
 var marker = L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
-	  marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+	  marker.bindPopup("<b>PUC MINAS</b><br>Unidade Praça da Liberdade").openPopup();
 
 function onLocationFound(e) {
 		var radius = e.accuracy / 2;
 
 		var locationMarker = L.marker(e.latlng).addTo(map)
+		marker.bindPopup("<b>Sua localização</b>).openPopup();
 
 		var locationCircle = L.circle(e.latlng, radius).addTo(map);
 	}
