--- a/index.html
+++ b/index.html
@@ -115,8 +115,18 @@
     maxZoom: 19,
     attribution: '© OpenStreetMap'
 }).addTo(map);
+	  
+	  var redIcon = new L.Icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+  shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+  iconSize: [25, 41],
+  iconAnchor: [12, 41],
+  popupAnchor: [1, -34],
+  shadowSize: [41, 41]
+});
 
-var marker = L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
+
+var marker = L.marker([-19.9326551541274, -43.936040839319524]), {icon: redIcon}).addTo(map);
 	  marker.bindPopup("<b>PUC MINAS</b><br>Unidade Praça da Liberdade").openPopup();
 
 function onLocationFound(e) {
