--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 });
 
 
-var marker = L.marker([-19.9326551541274, -43.936040839319524]), {icon: redIcon}).addTo(map);
+L.marker([-19.9326551541274, -43.936040839319524]), {icon: redIcon}).addTo(map);
 	  marker.bindPopup("<b>PUC MINAS</b><br>Unidade Praça da Liberdade").openPopup();
 
 function onLocationFound(e) {
