--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	  
 
 	 
-L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
+var marker = L.marker([-19.9326551541274, -43.936040839319524]).addTo(map);
 	   marker.bindPopup("<b>PUC MINAS</b><br>Unidade Praça da Liberdade").openPopup();
 
 function onLocationFound(e) {
