--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </h6>
         -->
         <h6>
+		<div class="d-grid gap-2 col-10 mx-auto">
         <div class="bloco">
           <div class="setas">
           <span><i class="fa-solid fa-chevron-right">&nbsp</i></span>&nbsp
@@ -97,8 +98,9 @@
             Chegue em casa mais cedo e com mais conforto 
           </div>
         </div>
+       </div>
       </h6>
-
+     </div>
 
         <div class="d-grid gap-2 col-10 mx-auto">
         <button id="botao-acao" class="btn btn-primary" style="font-weight: 600;">Começar agora!</button>
